# agent-development-environment

./: .gitignore  Dockerfile  README.md  deploy_to_cloud_run.sh  main.py  requirements.txt  run_local.sh
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
agents/: env-template  sessions.db
agents/a2a_orchestrator_agent/: deploy_agent.sh  requirements.txt
agents/bidi_agent/: .env-template  Dockerfile  agent.py  deploy.py  main.py  pyproject.toml  query_remote.py  sessions.db
agents/data_agent/: agent.py  deploy.py
agents/gcp_release_notes_agent/: agent.py
agents/hello_world_agent/: agent.py  deploy.py  query_remote.py
agents/math_agent/: Dockerfile  __main__.py  agent.py  deploy.py  deploy_agent.sh  query_local_a2a.sh  task_manager.py
agents/media_performance_agent/: Dockerfile  __main__.py  agent.py  deploy.py  deploy_agent.sh  main.py  requirements.txt  task_manager.py
agents/timesheet_agent/: Dockerfile  agent.py  deploy.py  deploy_agent.sh
frontends/.devcontainer/: Dockerfile  devcontainer.json
frontends/agent_platform/: package-lock.json
frontends/media_analyst/: README.md  next.config.ts  package-lock.json  package.json  pubspec.yaml
src/: Dockerfile  requirements.txt
src/app/: app_factory.py  fast_api_app.py  routes.py
src/shared/: config_env.py  vertex_agent_deploy.py
src/web/: fast_api_app.py
terraform/: .terraform.tfstate.lock.info  main.tf  outputs.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
tools/mcp-on-cloudrun/: pyproject.toml  server.py
utils/: deploy_to_cloud_run.py
(+82 files in other folders)
