[project]
name = "mcp-on-cloudrun"
version = "0.1.0"
description = "Example of deploying a MCP server on Cloud Run"
requires-python = ">=3.10"
dependencies = [
    "fastmcp==2.6.1",
    "google-adk==1.4.2",
    "mcp==1.9.4",
    "python-dotenv==1.1.1",
    "starlette==0.46.2",
    "uvicorn==0.34.3",
]
